# verseek

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py  sourceversion-list  verseek  verseek.leo  wrapper.py
debian/: control  copyright  pkginfo  rules
docs/: RelNotes-1.0.txt
pylib/: autoversion.py  cmd_list.py  cmd_seek.py  cmd_verseek.py  verseek.py
verseek_lib/: __init__.py
