[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "verseek"
version = "2.0.2"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = {text = "GPLv3+"}
description = "List or seek to a given version of a debian package git repo source"

[project.urls]
Homepage = "https://github.com/turnkeylinux/verseek"

[tool.setuptools]
packages = ["verseek_lib"]
script-files = ["verseek"]
include-package-data = false

[tool.setuptools.package-data]
verseek_lib = ["py.typed"]
